# MiniSQL

./: .gitattributes  .gitignore  CMakeLists.txt  MiniSQL.cpp  README.txt  all_in_one.sh
Doc/: BufferManager.md  Index&Buffer.md  Index&Buffer模块设计报告+心得.md  IndexManager.md  Test Description.md
Src/: CMakeLists.txt  MiniSQL.cpp  MiniSQL.h  main.cpp
Src/BufferManager/: BufferManager.cpp  BufferManager.h
Src/CatalogManager/: CatalogManager.cpp  CatalogManager.h
Src/IndexManager/: IndexManager.cpp  IndexManager.h
Src/Interpreter/: Interpreter.cpp  Interpreter.h
Src/RecordManager/: RecordManager.cpp  RecordManager.h
Test/: Generator.py  exec.txt  input.txt  input0.txt  input1.txt  output.txt  output0.txt  output1.txt
